--- a/jenkins-deployment.yaml
+++ b/jenkins-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nodejs
-        image: 891376985437.dkr.ecr.ap-south-1.amazonaws.com/nodejs:latest
+        image: public.ecr.aws/g6m8m4s9/nodejs:latest
         ports:
         - containerPort: 8080
 ---
